Changed gap on menu grid to vw instead of % to prevent items from overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ nav > a:hover {
   display: grid;
   grid-template-columns: 35vw 35vw;
   grid-template-rows: 1fr;
-  gap: 5%;
+  gap: 3vw;
   margin-bottom: 5%;
   place-content: center;
   place-items: center;
